# commandeer

./: .bzrignore  .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  commandeer.desktop  commandeer.vala  config.vapi  configure.ac  wscript
data/: commandeer.desktop
debian/: changelog  commandeer.pod  control  copyright  rules  watch
src/: Commandeer.vala  Makefile.am  SpawnCommand.vala  Wizard.vala  commandeer.ui.in  config.vapi  wscript_build
